improved spec yml
